--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-color: #FF5700;
   min-height: 100vh;
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -10,11 +11,3 @@
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
