--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,8 +1,146 @@
 .App-card {
+    padding-top: 20px;
     background-color: #ffd3bb;
-    height: 70vh;
+    height: auto;
+    max-height: 60%;
     margin-right: 25%;
     margin-left: 25%;
-    border-radius: 30px;
+    border-radius: 20px;
     margin-bottom: 15px;
+    min-width: 400px;
+}
+
+@media only screen and (max-width: 990px) {
+    .App-card {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
+@media only screen and (max-width: 590px) {
+    .App-card {
+        margin-left: 1%;
+        margin-right: 1%;
+        border-radius: 10px;
+    }
+    .post-image {
+        max-width: 98%;
+        height: auto;
+        border-radius: 4px;
+    }
+}
+
+@media only screen and (max-width: 460px) {
+    .App-card {
+        margin-left: 0%;
+        margin-right: 0%;
+        
+    }
+}
+
+.post-top-info {
+    text-align: left;
+    padding-left: 5%;
+    color: #522f1d;
+}
+
+#subredname {
+    color: #522f1d;
+    font-size: 1.2rem;
+}
+
+.post-title-container {
+    text-align: left;
+    padding-top: 3%;
+    padding-left: 5%;
+    padding-bottom: 1%;
+    padding-right: 2%;
+}
+
+.post-title {
+    color: #4e1b00;
+}
+
+.post-image-container {
+    width: 100%;
+    border-radius: var(--radius-2);
+}
+
+.post-image {
+    max-width: 95%;
+    max-height: 70vmin;
+    border-radius: 4px;
+}
+
+.post-video-container {
+    width: 100%;
+    border-radius: var(--radius-2);
+}
+
+.post-video {
+    max-width: 95%;
+    max-height: 70vmin;
+    border-radius: 4px;
+}
+
+.post-rich-video-container {
+    width: 100%;
+    height: 450px;
+    position: relative;
+}
+
+.post-rich-video {
+    width: 95%;
+    height: 100%;
+    border-radius: 4px;
+    position: relative;
+    border: 0;
+}
+
+.post-text-container {
+    max-height: 300px;
+    overflow: auto;
+    text-overflow: ellipsis;
+}
+
+.post-footer {
+    display: flex;
+    margin-left: 8%;
+    margin-right: 8%;
+    justify-content: space-between;
+    color: #522f1d;
+    padding-bottom: 1%;
+}
+
+#comment-logo-container {
+    display: flex;
+    width: 60px;
+    justify-content: space-between;
+}
+
+#comment-logo {
+    width: 25px;
+    height: 25px;
+}
+
+#comment-logo:hover {
+    width: 26px;
+    height: 26px;
+    color: #ff5500;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.comments-container {
+    max-height: 400px;
+    width: auto;
+    overflow: auto;
+    text-overflow: ellipsis;
+}
+
+.loading-comments {
+    margin-right: 7%;
+    margin-left: 7%;
+    padding-bottom: 4%;
+    margin-top: 3%;
 }
